# space-invaders-sdl2

./: .gitignore  CMakeLists.txt  Makefile  README.md  aliens.xcf  background.xcf  main.c  mono_crash.d4716fb0.0.json  space-invaders  sprite.c
assets/: font.xcf  ship.xcf
include/: aliens.h  const.h  debug.h  event.h  font.h  graphics.h  items.h  player.h  saucer.h  scene.h  shields.h  sprite.h
src/: aliens.c  debug.c  event.c  font.c  graphics.c  items.c  main.c  player.c  saucer.c  scene.c  shields.c  sprite.c
